--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&display=swap');
 @import "tailwindcss";
+
+@theme {
+    --font-upright: "Cormorant Upright", serif;
+}
